--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
-</body>
+<!DOCTYPE html>
+<html>
+<head>
+     <meta charset='utf-8'>
+     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+     <title>Page Title</title>
+     <meta name='viewport' content='width=device-width, initial-scale=1'>
+     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+     <script src='main.js'></script>
+</head>
+<body>
      <div id="cabecalho"
           <br><p>CABEÇALHO - Árvores nativas de cada estado do Brasil</p>
 </div>
 <div id="menu">
     <br><p>MENU </p>
-    <p>- 
+    <p>-
+</body>
+</html>>
+
+      
