--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
      <script src='main.js'></script>
 </head>
 <body>
-     <div id="cabecalho"
-          <br><p>CABEÇALHO - Árvores nativas de cada estado do Brasil</p>
-</div>
+     <header> 
+          <div id="cabecalho"
+               <br><p>CABEÇALHO - Árvores nativas de cada estado do Brasil</p>
+          </div>
+     </header>
+    
 <div id="menu">
     <br><p>MENU </p>
     <p>-
