--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
                <br><p>CABEÇALHO - Árvores nativas de cada estado do Brasil</p>
           </div>
      </header>
-    
-<div id="menu">
-    <br><p>MENU </p>
-    <p>-
+     <nav><
+          <div id="menu">
+               <p>MENU </p>
+          </div>
+     </nav>  
+
 </body>
 </html>>
-
+{
+ margin: 0;
+ padding: 0;
+ }
       
+#cabecalho
